force-app/main/default/objects/sse_demo_constants__mdt/sse_demo_constants__mdt.object-meta.xml
<CustomObject>
    <description>Variables to use within the flows for slack+salesforce automation</description>
    <label>#se-demo-constants</label>
    <pluralLabel>#se-demo-constants</pluralLabel>
</CustomObject>