force-app/main/default/objects/sse_demo_constants__mdt/fields/sse_Active__c.field-meta.xml
<CustomField>
    <fullName>sse_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check = the flow will run. Uncheck the box to turn off the flow. (via Get Records and Decision element in flow)</description>
    <inlineHelpText>Check = the flow will run. Uncheck the box to turn off the flow.</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>