force-app/main/default/objects/sse_demo_constants__mdt/fields/sse_Bot_Name__c.field-meta.xml
<CustomField>
    <fullName>sse_Bot_Name__c</fullName>
    <description>Variable name of the bot that delivers the message</description>
    <inlineHelpText>what should the bot&apos;s name be</inlineHelpText>
    <label>Bot Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>