force-app/main/default/objects/sse_demo_constants__mdt/fields/sse_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>sse_Button_Label__c</fullName>
    <description>Variable label of the button sent in slack flow</description>
    <inlineHelpText>What should the button say?</inlineHelpText>
    <label>Button Label</label>
    <length>20</length>
    <type>Text</type>
</CustomField>