force-app/main/default/objects/sse_demo_constants__mdt/fields/sse_Flow_Demo__c.field-meta.xml
<CustomField>
    <fullName>sse_Flow_Demo__c</fullName>
    <description>Identifies which demo flow the variables pertain to so that way the flows can query the right variables</description>
    <inlineHelpText>Which demo is this for?</inlineHelpText>
    <label>Flow Demo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Wrap</fullName>
                <default>true</default>
                <label>Service Wrap</label>
            </value>
            <value>
                <fullName>Sales Closed Initial Message</fullName>
            </value>
            <value>
                <fullName>Sales Closed Second Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>