force-app/main/default/objects/sse_demo_constants__mdt/fields/sse_Slack_ID_Recipient__c.field-meta.xml
<CustomField>
    <fullName>sse_Slack_ID_Recipient__c</fullName>
    <description>referenced in flow</description>
    <inlineHelpText>ID of a channel or user that should receive the message</inlineHelpText>
    <label>Slack ID Recipient</label>
    <length>20</length>
    <type>Text</type>
</CustomField>