force-app/main/default/objects/sse_demo_constants__mdt/fields/sse_Slack_Message__c.field-meta.xml
<CustomField>
    <fullName>sse_Slack_Message__c</fullName>
    <description>Variable message to be sent along with the slack screen</description>
    <inlineHelpText>What should the message say? Markdown format accepted.</inlineHelpText>
    <label>Slack Message (Markdown)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>