force-app/main/default/objects/sse_demo_constants__mdt/fields/sse_Slack_Workspace__c.field-meta.xml
<CustomField>
    <fullName>sse_Slack_Workspace__c</fullName>
    <description>SE should enter in their workspace id here. for maximum scale</description>
    <inlineHelpText>Enter the workspace id - found in your URL bar (the T034309HMCP in https://app.slack.com/client/T034309HMCP)</inlineHelpText>
    <label>Slack Workspace</label>
    <length>20</length>
    <type>Text</type>
</CustomField>