force-app/main/default/objects/sse_demo_constants__mdt/fields/sse_Which_App_To_Use__c.field-meta.xml
<CustomField>
    <fullName>sse_Which_App_To_Use__c</fullName>
    <inlineHelpText>Which of the apps should your message come from? Only select an option that you have authenticated with.</inlineHelpText>
    <label>Which App To Use</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Cloud for Slack</fullName>
                <default>true</default>
                <label>Service Cloud for Slack</label>
            </value>
            <value>
                <fullName>Sales Cloud for Slack</fullName>
            </value>
            <value>
                <fullName>Salesforce for Slack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>